--- a/configs/main.yaml
+++ b/configs/main.yaml
@@ -1,7 +1,8 @@
 defaults:
   - _self_
   - model: parseq
-  - charset: 94_full
+  # - charset: 94_full
+  - charset: pt
   - dataset: real
 
 model:
@@ -11,7 +12,8 @@ model:
   # The ordering in charset_train matters. It determines the token IDs assigned to each character.
   charset_train: ???
   # For charset_test, ordering doesn't matter.
-  charset_test: "0123456789abcdefghijklmnopqrstuvwxyz"
+  # charset_test: "0123456789abcdefghijklmnopqrstuvwxyz"
+  charset_test: "0123456789abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ!\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~àèìòùáé íóúýâêîôûãñõäëïöüÿÀÈÌÒÙÁÉÍÓÚÝÂÊÎÔÛÃÑÕÄËÏÖÜŸ"
   batch_size: 384
   weight_decay: 0.0
   warmup_pct: 0.075  # equivalent to 1.5 epochs of warm up
