--- a/configs/main.yaml
+++ b/configs/main.yaml
@@ -21,7 +21,8 @@ model:
 data:
   _target_: strhub.data.module.SceneTextDataModule
   root_dir: data
-  train_dir: ???
+  # train_dir: ???
+  train_dir: train
   batch_size: ${model.batch_size}
   img_size: ${model.img_size}
   charset_train: ${model.charset_train}
