--- a/configs/main.yaml
+++ b/configs/main.yaml
@@ -13,9 +13,9 @@ model:
   charset_train: ???
   # For charset_test, ordering doesn't matter.
   # charset_test: "0123456789abcdefghijklmnopqrstuvwxyz"
-  charset_test: "0123456789abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ!\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~àèìòùáé íóúýâêîôûãñõäëïöüÿÀÈÌÒÙÁÉÍÓÚÝÂÊÎÔÛÃÑÕÄËÏÖÜŸ"
-  batch_size: 384
-  weight_decay: 0.0
+  charset_test: "0123456789abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ!\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~àèìòùáéíóúýâêîôûãñõäëïöüÿÀÈÌÒÙÁÉÍÓÚÝÂÊÎÔÛÃÑÕÄËÏÖÜŸ"
+  batch_size: 18
+  weight_decay: 0.001
   warmup_pct: 0.075  # equivalent to 1.5 epochs of warm up
 
 data:
@@ -31,16 +31,18 @@ data:
   remove_whitespace: true
   normalize_unicode: true
   augment: true
-  num_workers: 2
+  num_workers: 4
 
 trainer:
   _target_: pytorch_lightning.Trainer
   _convert_: all
-  val_check_interval: 1000
+  # val_check_interval: 1000
+  val_check_interval: 1
   #max_steps: 169680  # 20 epochs x 8484 steps (for batch size = 384, real data)
   max_epochs: 20
   gradient_clip_val: 20
-  gpus: 2
+  # gpus: 1
+  gpus: 0
 
 ckpt_path: null
 pretrained: null
