--- a/configs/main.yaml
+++ b/configs/main.yaml
@@ -7,7 +7,7 @@ defaults:
 
 model:
   _convert_: all
-  img_size: [ 64, 196 ]  # [ height, width ]
+  img_size: [ 32, 128 ]  # [ height, width ]
   max_label_length: 40
   # The ordering in charset_train matters. It determines the token IDs assigned to each character.
   charset_train: ???
@@ -41,11 +41,11 @@ trainer:
   #max_steps: 169680  # 20 epochs x 8484 steps (for batch size = 384, real data)
   max_epochs: 20
   gradient_clip_val: 20
-  # gpus: 1
-  gpus: 0
+  gpus: 1
+  # gpus: 0
 
 ckpt_path: null
-pretrained: null
+pretrained: parseq
 
 hydra:
   output_subdir: config
