--- a/configs/main.yaml
+++ b/configs/main.yaml
@@ -36,7 +36,7 @@ data:
 trainer:
   _target_: pytorch_lightning.Trainer
   _convert_: all
-  val_check_interval: 5000
+  val_check_interval: 4958 # 9958 total steps
   #val_check_interval: 1
   #max_steps: 169680  # 20 epochs x 8484 steps (for batch size = 384, real data)
   max_epochs: 5
