--- a/configs/main.yaml
+++ b/configs/main.yaml
@@ -36,7 +36,7 @@ data:
 trainer:
   _target_: pytorch_lightning.Trainer
   _convert_: all
-  val_check_interval: 4958 # 9958 total steps
+  val_check_interval: 4956 # 9958 total steps - 2
   #val_check_interval: 1
   #max_steps: 169680  # 20 epochs x 8484 steps (for batch size = 384, real data)
   max_epochs: 5
@@ -44,7 +44,7 @@ trainer:
   gpus: 1
   # gpus: 0
 
-ckpt_path: null
+ckpt_path: epoch=1-step=12798-val_accuracy=40.4938-val_NED=48.2069.ckpt
 pretrained: parseq
 
 hydra:
